--- a/_config.yml
+++ b/_config.yml
@@ -27,9 +27,9 @@ markdown: kramdown
 theme: minima
 plugins:
   - jekyll-feed
-  - jekyll-scholar
+  - jekyll/scholar
 
-gems: ['jekyll/scholar']
+
 
 scholar:
   style: apa
